--- a/cluster/charts/crossplane/templates/stack-manager-serviceaccount.yaml
+++ b/cluster/charts/crossplane/templates/stack-manager-serviceaccount.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: extension-manager
+  name: stack-manager
   labels:
     app: {{ template "name" . }}
     chart: {{ template "chart" . }}
