--- a/cluster/charts/crossplane/templates/stack-manager-clusterrolebinding.yaml
+++ b/cluster/charts/crossplane/templates/stack-manager-clusterrolebinding.yaml
@@ -1,14 +1,14 @@
-# the extension manager ClusterRoleBinding is to the cluster-admin ClusterRole because it needs to
-# create arbitrary RBAC permissions for arbitrary extensions.  A service account cannot grant RBAC
+# the stack manager ClusterRoleBinding is to the cluster-admin ClusterRole because it needs to
+# create arbitrary RBAC permissions for arbitrary stacks.  A service account cannot grant RBAC
 # permissions that it doesn't already have itself, so to support the arbitrary permissions needs of
-# all extensions, we are using the cluster-admin role.
+# all stacks, we are using the cluster-admin role.
 #
-# Note that this is scoped to just the extension manager and not to all of Crossplane (which uses a
+# Note that this is scoped to just the stack manager and not to all of Crossplane (which uses a
 # separate service account and role/binding).
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ template "name" . }}-extension-manager
+  name: {{ template "name" . }}-stack-manager
   labels:
     app: {{ template "name" . }}
     chart: {{ template "chart" . }}
@@ -20,5 +20,5 @@ roleRef:
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: extension-manager
+  name: stack-manager
   namespace: {{ .Release.Namespace }}
